# actix-web-api-template

./: Cargo.toml  README.md
migrations/2022-04-24-175009_add_users/: up.sql
migrations/2022-06-11-095001_add_posts/: up.sql
src/: main.rs  schema.rs
src/errors/: handlers.rs  mod.rs
src/helpers/: mod.rs  tests.rs
src/posts/: helpers.rs  mod.rs  models.rs  routes.rs  tests.rs
src/users/: helpers.rs  mod.rs  models.rs  routes.rs  tests.rs
