[package]
name = "actix-web-api-template"
version = "0.1.0"
edition = "2021"
authors = ["Stefan van der Weide <hello@studioterabyte.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
derive_more = "0.99.17"
env_logger = "0.9.0"
log = "0.4.16"
